--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bachelor_project_app",
+  "name": "bachelor-project-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
